# rtlsdr-lab

./: .gitignore  README.md
.github/: copilot-instructions.md
alsa-lab/: README.md  notes.txt  sine_gen01.py
lab01/: CMakeLists.txt  README.md  demo1.py  demo2.py  exp01.py  requirements.txt  segdsp021.py
lab01/src/: driver.cc
lab02/: kqed.sh  noaa2.sh
lab03/: README.md  demo1.py  notes.txt  requirements.txt  rtl_sdr_to_numpy.py
pyrtlsdr-lab/: reader01.py  reader02.py
rtl-adsb-lab/: decoder.cxx  decoder.h  decoder1.cxx  driver.cxx  dump1090raw.20mar24  mode_s_decoder.cxx  mode_s_decoder.h  rtl_adsb.sample  sample1  sample_full  sample_mixed  sd  x1  x2
rtlsdr-lab/: kfpr-audio.sh  kfpr_file.sh  kqed_audio.sh  noaa1.sh  notes.txt  xx.sh
scripts/: aviation-audio.sh  catalog.json  catalog.py  dump978-stdout.sh  kapc-atis-audio.sh  kapc-file.sh  kccr-atis-audio.sh  kccr-file.sh  kfog-file.sh  kfpr-audio.sh  kfpr-file.sh  kmcc-atis-audio.sh  kmcc-file.sh  kmhr-atis-audio.sh  kmhr-file.sh  kqed-file.sh  kqed-stereo.sh  ksfo-atis-audio.sh  ksuu-atis-audio.sh  ksuu-file.sh  marine16-audio.sh  wxl88_audio.sh  wxl88_file.sh  wz2504-audio.sh  wz2504-file.sh  xx.sh
tech/: marine_freq.txt  marine_vhf.json  noaa.sh  oakland.sh
